# sealed-secrets

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml  release-please.yml  test.yml
src/: io.rs  lib.rs  main.rs
src/secret/: mod.rs
