[package]
name = "sealed-secrets"
description = "A simple Rust lib to encrypt and decrypt secrets using Sealed Secrets"
license = "GPL-3.0"
version = "0.2.1"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
securestore = "0.100.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
